# GraphicsExamFramework

./: .gitignore  CMakeLists.txt  TODO  move.yaml  temp.sln  temp.vcxproj  temp.vcxproj.filters
asset/: basic_cube.blend1  basic_cube.mtl  basic_sphere.mtl  bishop.blend  bishop.blend1  bishop.mtl  modell_chessBoard.mtl  pawn.mtl  rook.blend  rook.blend1  rook.mtl
asset/Crate/: Crate1.mtl
class/: Mesh.cpp  Mesh.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
doc/: mainpage.hpp
environment/: Camera.cpp  Camera.hpp  LightSource.cpp
game/: Board.cpp  Board.hpp  Piece.cpp  Piece.hpp
header/: board.hpp  camera.hpp  chess.hpp  errorHandler.hpp  gl_model.hpp  gl_setup.hpp  glfw_eventHandler.hpp  glfw_eventInterface.hpp  glfw_setUp.hpp  glfw_setup.hpp  globalVar.hpp  global_function  global_function.hpp  moveParser.hpp  piece.hpp  struct.hpp  yamlParser.hpp  yaml_parser.hpp
helpers/: Yaml_parser.cpp  errorHandler.cpp  glfw_setup.cpp  global_function.cpp  global_function.hpp  moveParser.cpp  moveParser.hpp
modeler/: Shader.cpp  Shader.hpp  struct.hpp
resources/: chess.cpp
resources/moves/: move.yaml
shader/: fragment.frag  fragmentPiece.frag  vertex.vert  vertexPiece.vert
source/components/: GraphicsComponent.cpp  GraphicsComponent.hpp  IComponent.cpp  IComponent.hpp
source/environment/: Camera.cpp  LightSource.cpp  LightSource.hpp
source/game/: Board.cpp  Cube.cpp  Cube.hpp  Object.cpp  Object.hpp  Piece.hpp
source/helpers/: Yaml_parser.cpp  Yaml_parser.hpp  glfw_setup.cpp  global_function.cpp  global_function.hpp  moveParser.cpp
source/modeler/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  ShaderManager.cpp  struct.hpp
source/src/: main.cpp
src/: board.cpp  camera.cpp  errorHandler.cpp  glfw_eventHandler.cpp  glfw_setUp.cpp  glfw_setup.cpp  global_function.cpp  main.cpp  move.yaml  moveParser.cpp  piece.cpp  yaml_parser.cpp
